--- a/assets/sorter.css
+++ b/assets/sorter.css
@@ -40,6 +40,7 @@ body {
   background-attachment: fixed;
   margin: 0;
   font-family: "Quicksand", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+  font-weight: 600;
   font-size: 14px;
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
@@ -327,7 +328,7 @@ body.dark-mode .member-badge {
 
 .member-name {
   font-family: "Quicksand", sans-serif;
-  font-weight: 600;
+  font-weight: 800;
   font-size: 18px;
   margin: 0;
   color: var(--text-dark);
@@ -748,7 +749,8 @@ body.dark-mode .footer-link {
   -webkit-touch-callout: none;
   -webkit-user-select: none;
   user-select: none;
-  font-weight: 600;
+  font-family: "Nunito";
+  font-weight: 800;
 }
 
 @media screen and (max-width: 500px) {
@@ -758,7 +760,8 @@ body.dark-mode .footer-link {
     right: 0;
     margin: 0 auto 30px;
     justify-content: center;
-    font-weight: 600;
+    font-family: "Nunito";
+    font-weight: 800;
   }
 }
 
